tests/data/invalid/ragged_bracket_array.extxyz
1
Properties=species:S:1:pos:R:3 Lattice=[[1,2],[3]]
H 0.0 0.0 0.0
